// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnitchDialog matches snapshot 1`] = `
<div
  class="bp5-portal"
>
  <div
    aria-live="polite"
    class="bp5-overlay bp5-overlay-open bp5-overlay-scroll-container"
  >
    <div
      class="bp5-overlay-start-focus-trap bp5-overlay-appear bp5-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp5-overlay-backdrop bp5-overlay-appear bp5-overlay-appear-active"
    />
    <div
      class="bp5-dialog-container bp5-overlay-content bp5-overlay-appear bp5-overlay-appear-active"
      tabindex="0"
    >
      <div
        aria-labelledby="title-bp-dialog-0"
        aria-modal="true"
        class="bp5-dialog snitch-dialog"
        role="dialog"
      >
        <div
          class="bp5-dialog-header"
        >
          <h6
            class="bp5-heading"
            id="title-bp-dialog-0"
          >
            Be snitchin
          </h6>
          <button
            aria-label="Close"
            class="bp5-button bp5-minimal bp5-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp5-icon bp5-icon-small-cross"
            >
              <svg
                data-icon="small-cross"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M188.2 160L234 205.8C237.8 209.4 240 214.4 240 220C240 231 231 240 220 240C214.4 240 209.4 237.8 205.8 234.2L160 188.2L114.2 234.2C110.6 237.8 105.6 240 100 240C89 240 80 231 80 220C80 214.4 82.2 209.4 85.8 205.8L131.8 160L86 114.2C82.2 110.6 80 105.6 80 100C80 89 89 80 100 80C105.6 80 110.6 82.2 114.2 85.8L160 131.8L205.8 86C209.4 82.2 214.4 80 220 80C231 80 240 89 240 100C240 105.6 237.8 110.6 234.2 114.2L188.2 160z"
                  fill-rule="evenodd"
                  style="transform-origin: center;"
                  transform="scale(0.05, -0.05) translate(-160, -160)"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="bp5-dialog-body"
        />
        <div
          class="bp5-dialog-footer"
        >
          <div
            class="bp5-dialog-footer-actions"
          >
            <button
              class="bp5-button bp5-intent-primary"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                Next
              </span>
              <span
                aria-hidden="true"
                class="bp5-icon bp5-icon-arrow-right"
              >
                <svg
                  data-icon="arrow-right"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp5-overlay-end-focus-trap bp5-overlay-appear bp5-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`SnitchDialog matches snapshot with history 1`] = `
<div
  class="bp5-portal"
>
  <div
    aria-live="polite"
    class="bp5-overlay bp5-overlay-open bp5-overlay-scroll-container"
  >
    <div
      class="bp5-overlay-start-focus-trap bp5-overlay-appear bp5-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp5-overlay-backdrop bp5-overlay-appear bp5-overlay-appear-active"
    />
    <div
      class="bp5-dialog-container bp5-overlay-content bp5-overlay-appear bp5-overlay-appear-active"
      tabindex="0"
    >
      <div
        aria-labelledby="title-bp-dialog-1"
        aria-modal="true"
        class="bp5-dialog snitch-dialog"
        role="dialog"
      >
        <div
          class="bp5-dialog-header"
        >
          <h6
            class="bp5-heading"
            id="title-bp-dialog-1"
          >
            Be snitchin
          </h6>
          <button
            aria-label="Close"
            class="bp5-button bp5-minimal bp5-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp5-icon bp5-icon-small-cross"
            >
              <svg
                data-icon="small-cross"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M188.2 160L234 205.8C237.8 209.4 240 214.4 240 220C240 231 231 240 220 240C214.4 240 209.4 237.8 205.8 234.2L160 188.2L114.2 234.2C110.6 237.8 105.6 240 100 240C89 240 80 231 80 220C80 214.4 82.2 209.4 85.8 205.8L131.8 160L86 114.2C82.2 110.6 80 105.6 80 100C80 89 89 80 100 80C105.6 80 110.6 82.2 114.2 85.8L160 131.8L205.8 86C209.4 82.2 214.4 80 220 80C231 80 240 89 240 100C240 105.6 237.8 110.6 234.2 114.2L188.2 160z"
                  fill-rule="evenodd"
                  style="transform-origin: center;"
                  transform="scale(0.05, -0.05) translate(-160, -160)"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="bp5-dialog-body"
        />
        <div
          class="bp5-dialog-footer"
        >
          <div
            class="bp5-dialog-footer-actions"
          >
            <button
              class="bp5-button bp5-minimal left-align-button"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                History
              </span>
            </button>
            <button
              class="bp5-button bp5-intent-primary"
              type="button"
            >
              <span
                class="bp5-button-text"
              >
                Next
              </span>
              <span
                aria-hidden="true"
                class="bp5-icon bp5-icon-arrow-right"
              >
                <svg
                  data-icon="arrow-right"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp5-overlay-end-focus-trap bp5-overlay-appear bp5-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;
